--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
+    "vue-i18n": "10",
     "vue-router": "^4.5.0",
     "vue3-toastify": "^0.2.8",
     "vuetify": "^3.8.2"
